operator/pkg/gateway-api/testdata/gamma/mesh-frontend/cec-echo-v2-output.yaml
metadata:
  creationTimestamp: null
  labels:
    cilium.io/use-original-source-address: "true"
    gateway.networking.k8s.io/gateway-name: mesh-split-v1
  name: echo-v2
  namespace: gateway-conformance-mesh
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1
    controller: true
    kind: HTTPRoute
    name: mesh-split-v1
    uid: ""
  resourceVersion: "1"
spec:
  backendServices:
  - name: echo-v2
    namespace: gateway-conformance-mesh
    number:
    - "80"
  resources:
  - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    filterChains:
    - filterChainMatch:
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          commonHttpProtocolOptions:
            maxStreamDuration: 0s
          httpFilters:
          - name: envoy.filters.http.grpc_web
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.grpc_stats
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emitFilterState: true
              enableUpstreamStats: true
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig: {}
          rds:
            routeConfigName: listener-insecure
          statPrefix: listener-insecure
          streamIdleTimeout: 300s
          upgradeConfigs:
          - upgradeType: websocket
          useRemoteAddress: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: listener
    socketOptions:
    - description: Enable TCP keep-alive (default to enabled)
      intValue: "1"
      level: "1"
      name: "9"
    - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
      intValue: "10"
      level: "6"
      name: "4"
    - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
      intValue: "5"
      level: "6"
      name: "5"
    - description: TCP keep-alive probe max failures.
      intValue: "10"
      level: "6"
      name: "6"
  - '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    name: listener-insecure
    virtualHosts:
    - domains:
      - '*'
      name: '*'
      routes:
      - match:
          prefix: /
        responseHeadersToAdd:
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: X-Header-Set
            value: set
        route:
          maxStreamDuration:
            maxStreamDuration: 0s
          weightedClusters:
            clusters:
            - name: gateway-conformance-mesh:echo-v2:80
              weight: 1
            - name: gateway-conformance-mesh:echo-v2:80
              weight: 1
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 5s
    edsClusterConfig:
      serviceName: gateway-conformance-mesh/echo-v2:80
    name: gateway-conformance-mesh:echo-v2:80
    outlierDetection:
      splitExternalLocalOriginErrors: true
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 60s
        useDownstreamProtocolConfig:
          http2ProtocolOptions: {}
  services:
  - listener: ""
    name: echo-v2
    namespace: gateway-conformance-mesh
    ports:
    - 80
    - 8080
